8283346: Added null to the test data